fixed Eclipse compiler warnings